[package]
name = "c8488"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
env_logger = "0.9.1"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_off"] }
thiserror = "1.0.37"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
