[package]
name = "c8488"
version = "0.1.0"
description = "PC weather station (Bresser 5-in-1, 6-in-1 PC and other CCLEL C8488 clones) to Influxdb logger"
authors = ["Robert Jördens <rj@quartiq.de>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/jordens/c8488"
repository = "https://github.com/jordens/c8488.git"
documentation = "https://docs.rs/c8488"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.65" } #, features = ["backtrace"] }
chrono = "0.4.22"
env_logger = "0.9.1"
log = { version = "0.4.17", features = ["max_level_debug", "release_max_level_off"] }
pico-args = "0.5.0"
thiserror = "1.0.37"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
